Moved JS and fixed vertical alignment
JS was moved to external file. Added a favicon as an .ico as well. Lots of other little changes too.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,27 @@
+body *{
+	/*border: 1px dashed red;*/
+}
+
 html{
 	font-family: arial, sans-serif;
 	background-color: #F2F2F2;
+	height: 100%;
+}
+
+body{
+	height: 100%;
+	margin: 0;
+}
+
+
+.container{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+}
+
+#clock{
+	font-size: 64px;
 }
